Temp Overflow fix. Typen input js working

--- a/public/sass/abstracts/_mixins.scss
+++ b/public/sass/abstracts/_mixins.scss
@@ -20,6 +20,12 @@
     background-position: center;
 }
 
+@mixin background-popup{
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 @mixin widthImageSetting {
     width: 6rem;
     height: auto;
